<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app_chaski.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.app_chaski.ui.pedidos.PedidosFragment"
        android:label="@string/mis_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.app_chaski.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>

